--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="keywords" content="Bright Design Studio" />
 <title>Why You Should Seriously Consider SEO Management and Data Analytics Services </title>
 <meta name="description" content="Currently, SEO drives 1,000% more traffic than social media. Including this statistic, there’s an abundance more, proving the sheer value of this tremendous digital marketing strategy.">
-<link rel="canonical" href="">
+<link rel="canonical" href="https://bright-design-studio.netlify.app/">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/s3-urls/page-5-styles.css" />
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
