--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="googlebot" content="noodp, noydir">
 <meta name="language" content="en-us">
 <meta name="distribution" content="Global">
+<meta name="google-site-verification" content="nuaOlcRWlsUmBSIylZcIUiFEUHcbhsmTcb2j5VfxZJQ" />
 <meta property="og:title" content="Bright Design Studio" />
 <meta name="keywords" content="Bright Design Studio" />
 <title>Why You Should Seriously Consider SEO Management and Data Analytics Services </title>
